--- a/EssayCheek.Api/EssayCheek.Api.csproj
+++ b/EssayCheek.Api/EssayCheek.Api.csproj
@@ -6,4 +6,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="EFxceptions" Version="0.4.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+    </ItemGroup>
+
 </Project>
