--- a/EssayCheek.Api/appsettings.json
+++ b/EssayCheek.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host = localhost,Port = 5234;Database = noEssay; Username = postgres; Password = qwerty"
+  }
 }
