--- a/EssayCheek.Api/EssayCheek.Api.csproj
+++ b/EssayCheek.Api/EssayCheek.Api.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="DeepCloner" Version="0.10.4" />
       <PackageReference Include="EFxceptions" Version="0.4.5" />
       <PackageReference Include="FluentAssertions" Version="6.12.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
@@ -18,7 +19,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
       <PackageReference Include="Moq" Version="4.20.70" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
@@ -26,6 +27,10 @@
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
       <PackageReference Include="Tynamix.ObjectFiller" Version="1.5.8" />
       <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Helpers\Extensions\" />
     </ItemGroup>
 
 </Project>
