--- a/EssayCheek/EssayCheek.csproj
+++ b/EssayCheek/EssayCheek.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="DeepCloner" Version="0.10.4" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     </ItemGroup>
 
