--- a/EssayCheek.Api/EssayCheek.Api.csproj
+++ b/EssayCheek.Api/EssayCheek.Api.csproj
@@ -23,6 +23,7 @@
       <PackageReference Include="Moq" Version="4.20.70" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
       <PackageReference Include="RESTFulSense" Version="2.15.0" />
+      <PackageReference Include="Standard.AI.OpenAI" Version="0.6.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
