--- a/EssayCheek.Api/appsettings.json
+++ b/EssayCheek.Api/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "OpenAiKey": "string",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host = localhost,Port = 5234;Database = noEssay; Username = postgres; Password = qwerty"
