--- a/EssayCheek.Api/appsettings.json
+++ b/EssayCheek.Api/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "OpenAiKey": "YOUR_API_KEY",
+  "OpenAiKey": "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",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host = localhost,Port = 5234;Database = noEssay; Username = postgres; Password = qwerty"
