--- a/EssayCheek/EssayCheek.csproj
+++ b/EssayCheek/EssayCheek.csproj
@@ -10,6 +10,8 @@
     <ItemGroup>
       <PackageReference Include="DeepCloner" Version="0.10.4" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+      <PackageReference Include="Standard.AI.OpenAI" Version="0.6.0" />
+      <PackageReference Include="Telegram.Bot" Version="19.0.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -26,6 +28,10 @@
 
     <ItemGroup>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\EssayCheek.Api\EssayCheek.Api.csproj" />
     </ItemGroup>
 
 </Project>
