--- a/EssayCheek.Api/appsettings.json
+++ b/EssayCheek.Api/appsettings.json
@@ -5,9 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "OpenAiKey": "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",
+  "OpenAiKey": "YOUR_OPENAI_KEY",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host = localhost,Port = 5234;Database = noEssay; Username = postgres; Password = qwerty"
+    "DefaultConnection": "YOUR_CONNECTION_STRING"
+  },
+  "BotSettings": {
+    "Token": "YOUR_TELEGRAM_BOT_TOKEN"
   }
 }
