--- a/EssayCheek.Api/appsettings.json
+++ b/EssayCheek.Api/appsettings.json
@@ -6,11 +6,10 @@
     }
   },
   "OpenAiKey": "YOUR_OPENAI_KEY",
+  "TelegramBotToken": "YOUR_TELEGRAM_BOT_TOKEN",
+  
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "YOUR_CONNECTION_STRING"
-  },
-  "BotSettings": {
-    "Token": "YOUR_TELEGRAM_BOT_TOKEN"
   }
 }
