--- a/EssayCheek.Api/appsettings.json
+++ b/EssayCheek.Api/appsettings.json
@@ -5,11 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "OpenAiKey": "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",
-  "TelegramBotToken": "6750350401:AAFgcHkE3LCYjomJFndPuBpX0kxy6G9n8c0",
+  "OpenAiKey": "OPEN_AI_KEY",
+  "TelegramBotToken": "TELEGRAM_BOT_TOKEN",
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host = localhost,Port = 5234;Database = noEssay; Username = postgres; Password = qwerty"
+    "DefaultConnection": "CONNECTION_STRING"
   }
 }
